Snipcart fixed again - top visibility of Cart

--- a/online-sunglass-store-app/src/card.css
+++ b/online-sunglass-store-app/src/card.css
@@ -39,5 +39,5 @@ a:hover{
 }
 
 .snipcart * {
-    margin:10px;
+    top: 20px;
 }
